Criados os componentes Inputs com título e link personalizável, entre outras propriedades

--- a/src/components/SocialMedia/SocialMedia.css
+++ b/src/components/SocialMedia/SocialMedia.css
@@ -1,4 +1,7 @@
 .SocialMedia {
+    width: 95%;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
