--- a/src/components/Form/FormCadastro.css
+++ b/src/components/Form/FormCadastro.css
@@ -1,17 +1,17 @@
 .FormCadastro {
     width: 600px;
-    height: 600px;
+    min-height: 400px;
     box-shadow: 0px 0px 16px -3px #000000;
     border-radius: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: space-around;
+    padding: 1rem 0 1rem 0;
 }
 
 .dados {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -25,6 +25,23 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid;
+    border: 1px solid #d1d1d1;
     border-radius: 10px;
+    padding: 1rem 0 1rem 0;
+}
+
+.contratoContainer, 
+.contratoContainer div {
+    display: flex;
+}
+
+.contratoContainer a,
+.contratoContainer div p {
+    margin-left: 3px;
+}
+
+.contratoContainer a:hover {
+    transition: all 0s;
+    font-weight: bold;
+    color: rgb(247, 0, 255);
 }
