--- a/src/components/FinalizarCompra/style.css
+++ b/src/components/FinalizarCompra/style.css
@@ -15,10 +15,14 @@
   width: 50%;
 }
 #valor {
+  color: var(--corPrimaria);
   line-height: 1.5;
   font-size: 15px;
   font-weight: 700;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.226);
+  padding: 3px 5px;
+  background-color: var(--shadow-color);
+  border-radius: 5px;
 }
 .finalizarCompra a{
   flex: 1;
@@ -32,7 +36,7 @@
   align-self: flex-end;
   border: none;
   border-radius: 10px 0 0 0;
-  background-color: var(--corPrimaria);
+  background-color: var(--corSecundaria);
   color: var(--whiteColor);
   font-size: 15px;
   font-weight: 500;
