--- a/src/components/SacolaVazia/style.css
+++ b/src/components/SacolaVazia/style.css
@@ -1,10 +1,12 @@
+:root{
+  --shadow-color:  #e4e4e4b0;
+}
 /*Sacola Vazia*/
 .conteudoSacolaVazia{
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
   font-size: 20px;
   flex-wrap: wrap;
   text-align: center;
@@ -12,8 +14,15 @@
   margin-bottom: auto;
 }
 .sacolaIcone{
-  width: 85px;
-  color: var(--corSecundaria);
+  width: 100px;
+  height: 100px;
+  margin-bottom: 5%;
+}
+.conteudoSacolaVazia p{
+  font-weight: 500;
+  padding: 5px 5px;
+  background-color: var(--shadow-color);
+  border-radius: 5px;
 }
 button#voltarCompras{
   background-color: var(--corSecundaria);
@@ -23,5 +32,5 @@ button#voltarCompras{
   border-radius: 5px;
   cursor: pointer;
   font-weight: 300;
-  margin-top:30%;
+  margin-top:25%;
 }
