--- a/src/components/Form/FormCadastro.css
+++ b/src/components/Form/FormCadastro.css
@@ -45,3 +45,22 @@
     font-weight: bold;
     color: rgb(247, 0, 255);
 }
+
+@media (max-width: 768px) {
+    .FormCadastro {
+        box-shadow: none;
+    }
+
+    .dadosPessoais,
+    .endereco {
+        width: 100%;
+        margin: 1rem 0 1rem 0;
+        border: none;
+    }
+}
+
+@media (max-width: 620px) {
+    .dados {
+        flex-direction: column;
+    }
+}
