--- a/src/components/Form/FormLogin.css
+++ b/src/components/Form/FormLogin.css
@@ -1,5 +1,5 @@
 .Form {
-    width: 400px;
+    width: 350px;
     height: 350px;
     box-shadow: 0px 0px 16px -3px #000000;
     border-radius: 30px;
@@ -23,3 +23,15 @@
 .footerForm a {
     margin-left: 5px;
 }
+
+    @media (max-width: 768px) {
+        .Form {
+            box-shadow: none;
+        }
+    }
+
+    @media (max-width: 400px) {
+        .Form {
+            width: 100%;
+        }
+    }
