--- a/src/components/pages/Login/Login.css
+++ b/src/components/pages/Login/Login.css
@@ -6,6 +6,7 @@
 .bloco {
     height: 100%;
     width: 50%;
+    padding-top: 55px;
 }
 
 #right {
@@ -20,6 +21,20 @@
     justify-content: center;
 }
 
-.bloco img {
-    height: 90%;
-}
+.bloco .login {
+    max-width: 100%;
+    max-height: 90%;
+    height: auto;
+    width: auto;
+}   
+
+    @media (max-width: 768px) {
+        .bloco#left {
+            display: none;
+        }
+
+        .bloco#right {
+            width: 100%;
+            justify-content: center;
+        }
+    }
