--- a/src/components/Form/FormPassRecovery.css
+++ b/src/components/Form/FormPassRecovery.css
@@ -1,10 +1,19 @@
 .FormPassRecovery {
+    padding: 0.5rem;
     width: 350px;
-    height: 180px;
+    height: 190px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     box-shadow: 0px 0px 16px -3px #000000;
     border-radius: 30px;
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    .FormPassRecovery {
+        box-shadow: none;
+        width: 100%;
+    }
 }
