--- a/src/components/Form/FormPassRecovery.css
+++ b/src/components/Form/FormPassRecovery.css
@@ -1,3 +1,9 @@
+@keyframes surgirDeCima {
+    0%      {transform: translateY(-600px);}
+    50%     {transform: translateY(100px);}
+    100%    {transform: translateY(0px);}
+}
+
 .FormPassRecovery {
     padding: 0.5rem;
     width: 350px;
@@ -9,6 +15,7 @@
     box-shadow: 0px 0px 16px -3px #000000;
     border-radius: 30px;
     text-align: center;
+    animation: surgirDeCima 1s;
 }
 
 @media (max-width: 768px) {
