Melhoria no css

--- a/src/components/pages/CardComponets/Botoes/BotaoQuantidade/BotaoQuantidade.css
+++ b/src/components/pages/CardComponets/Botoes/BotaoQuantidade/BotaoQuantidade.css
@@ -1,5 +1,5 @@
 
-.wrapper{
+/*.wrapper{
     margin-top: 4%;
     height: 40px;
     min-width:80px;
@@ -9,9 +9,8 @@
     background: rgb(17, 16, 16);
     border-radius: 30px;
     box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-}
-
-.wrapper span{
+}*/
+.botoes span{
     width:100%;
     text-align:center;
     font-size: 15px;
@@ -20,7 +19,7 @@
     color: white;
 }
 
-.wrapper span.num{
+.botoes span.num{
     font-size: 15px;
     border-right: 2px solid rgba (0,0,0,0.2);
     border-left: 2px solid rgba (0,0,0,0.2);
