Componentes foram adicionados

--- a/src/components/Login/Form/FormLogin.css
+++ b/src/components/Login/Form/FormLogin.css
@@ -11,7 +11,7 @@
     border-radius: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     animation: surgirDeCima 1s;
 }
