--- a/src/components/Sacola/ItemSacola/style.css
+++ b/src/components/Sacola/ItemSacola/style.css
@@ -96,7 +96,7 @@
   flex-wrap: wrap;
   gap: 10px;
 }
-#botoesConfigura button{
+#botoesConfigura .excluir,#botoesConfigura a{
   flex: 1;
   height: 30px;
   background-color: var(--whiteColor);
@@ -104,7 +104,11 @@
   font-size: 13px;
   border-radius: 3px; 
 }
-button a{
+#botoesConfigura a>button{
+  width: 100%;
+  height: 100%;
+}
+a{
   text-decoration: none;
   color:unset; 
 }
