--- a/src/components/pages/CardComponets/InfoInicial/infoinicial.css
+++ b/src/components/pages/CardComponets/InfoInicial/infoinicial.css
@@ -1,4 +1,14 @@
 small, h2 {
     color: red;
     display: inline-flex;
+    text-align: center;
+}
+h1{
+    padding-bottom: 5%;
+}
+.precos{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
